<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/Titulo"
        android:textSize="35dp"
        android:textColor="@color/black"
        android:gravity="center"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/mensaje"
        android:gravity="center_horizontal"
        android:textColor="@color/blue"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/numero1"
            android:textSize="20dp"
            android:textColor="@color/blue"/>
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/enumero1"
            android:imeOptions="actionSend"
            android:inputType="number"/>

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/numero2"
            android:textSize="20dp"
            android:textColor="@color/blue"/>
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/enumero2"
            android:imeOptions="actionSend"
            android:inputType="number" />

    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >
        <RadioGroup
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:id="@+id/rgSelect">
            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/rbsuma"
                android:text="@string/suma"
                android:onClick="onRadioButtonClicked"
                android:layout_alignParentTop="true"/>
            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/rbresta"
                android:text="@string/resta"
                android:onClick="onRadioButtonClicked"
                android:layout_toRightOf="@+id/rbsuma"/>
            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/rbmulticacion"
                android:text="@string/multiplicar"
                android:onClick="onRadioButtonClicked"
                android:layout_toRightOf="@+id/rbresta"/>
            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/rbdivision"
                android:text="@string/Dividir"
                android:onClick="onRadioButtonClicked"
                android:layout_toRightOf="@+id/rbmulticacion"/>
        </RadioGroup>
    </RelativeLayout>

</LinearLayout>
